Switch contextApi to Zustand and fix realted bugs

--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.17.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
     "moment": "^2.29.1",
@@ -59,6 +60,7 @@
     "@eslint/js": "^9.17.0",
     "@types/date-fns": "^2.6.3",
     "@types/emoji-mart": "^3.0.14",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
