--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "ioredis": "^5.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.16",
@@ -39,6 +40,7 @@
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/multer-s3": "^3.0.3",
     "@types/nodemailer": "^6.4.17",
