working in chat implemention

--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/query-sync-storage-persister": "^5.64.1",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-query-persist-client": "^5.64.1",
@@ -67,7 +68,7 @@
     "@types/date-fns": "^2.6.3",
     "@types/emoji-mart": "^3.0.14",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@types/react-redux": "^7.1.34",
