--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@ffmpeg/core": "^0.12.10",
     "@ffmpeg/ffmpeg": "^0.12.15",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@heroicons/react": "^2.2.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-scroll-area": "^1.2.3",
@@ -24,6 +25,8 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@stripe/react-stripe-js": "^3.5.1",
+    "@stripe/stripe-js": "^6.1.0",
     "@tanstack/query-sync-storage-persister": "^5.64.1",
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-query-persist-client": "^5.64.1",
@@ -69,7 +72,7 @@
     "@types/emoji-mart": "^3.0.14",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^22.13.13",
-    "@types/react": "^18.3.18",
+    "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
     "@types/react-redux": "^7.1.34",
     "@types/react-webcam": "^3.0.0",
