--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "date-fns": "^4.1.0",
     "emoji-mart": "^5.6.0",
     "framer-motion": "^11.17.0",
+    "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
