--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.474.0",
+    "mediasoup-client": "^3.10.0",
     "moment": "^2.29.1",
     "mongoose": "^8.12.2",
     "postcss": "^8.4.49",
