--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.740.0",
+    "@aws-sdk/client-s3": "^3.806.0",
+    "@aws-sdk/lib-storage": "^3.806.0",
     "@prisma/client": "^6.1.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@types/socket.io": "^3.0.2",
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
@@ -23,16 +26,20 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
-    "ioredis": "^5.5.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "mediasoup": "^3.15.8",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
+    "redis-adapter": "^0.2.0",
     "socket.io": "^4.8.1",
-    "stripe": "^17.7.0"
+    "socket.io-redis": "^6.1.1",
+    "stripe": "^17.7.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -46,8 +53,11 @@
     "@types/multer-s3": "^3.0.3",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.10",
+    "@types/redis": "^4.0.11",
+    "@types/uuid": "^10.0.0",
     "google-auth-library": "^9.15.1",
     "nodemon": "^3.1.7",
+    "redis": "^5.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
