--- a/media/package.json
+++ b/media/package.json
@@ -13,11 +13,12 @@
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "mediasoup": "^3.12.8",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
+    "@types/socket.io": "^3.0.1",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
