--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "mediasoup": "^3.15.8",
+    "mongodb": "^6.16.0",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
