--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-spring/web": "^10.0.1",
     "@shadcn/ui": "^0.0.4",
     "@stripe/react-stripe-js": "^3.5.1",
     "@stripe/stripe-js": "^6.1.0",
@@ -55,6 +56,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
+    "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
@@ -63,6 +65,7 @@
     "react-share": "^4.4.1",
     "react-toastify": "^11.0.2",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.15.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "socket.io-client": "^4.8.1",
